--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ body {
 }
 
 main {
-  background: url(images/background.svg);
-  width: 375px;
-  height: 720px;
+  background: url(images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
   border-radius: 10px;
 }
 
